# server/docs/swagger.json
@@ -81,7 +81,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.Role"
+                            "$ref": "#/definitions/authority.RoleModel"
                         }
                     }
                 ],
@@ -729,7 +729,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CronReq"
+                            "$ref": "#/definitions/sysTool.CronModel"
                         }
                     }
                 ],
@@ -1082,42 +1082,6 @@
                 }
             }
         },
-        "/jwt/jsonInBlacklist": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "JwtApi"
-                ],
-                "summary": "jwt加入黑名单",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "msg": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
         "/logReg/captcha": {
             "post": {
                 "security": [
@@ -1194,6 +1158,40 @@
                                         "data": {
                                             "$ref": "#/definitions/response.LoginResponse"
                                         },
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/logReg/logout": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "LogRegApi"
+                ],
+                "summary": "用户登出",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
                                         "msg": {
                                             "type": "string"
                                         }
@@ -1705,7 +1703,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/authority.UserModel"
+                            "$ref": "#/definitions/request.AddUser"
                         }
                     }
                 ],
@@ -1805,7 +1803,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/authority.UserModel"
+                            "$ref": "#/definitions/request.EditUser"
                         }
                     }
                 ],
@@ -2040,13 +2038,13 @@
         "authority.ApiModel": {
             "type": "object",
             "required": [
-                "api_group",
+                "apiGroup",
                 "description",
                 "method",
                 "path"
             ],
             "properties": {
-                "api_group": {
+                "apiGroup": {
                     "description": "api组",
                     "type": "string"
                 },
@@ -2201,6 +2199,9 @@
         },
         "authority.RoleModel": {
             "type": "object",
+            "required": [
+                "roleName"
+            ],
             "properties": {
                 "createdAt": {
                     "description": "创建时间",
@@ -2350,6 +2351,40 @@
                 }
             }
         },
+        "request.AddUser": {
+            "type": "object",
+            "required": [
+                "password",
+                "roleId",
+                "username"
+            ],
+            "properties": {
+                "active": {
+                    "description": "是否活跃",
+                    "type": "boolean"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "roleId": {
+                    "description": "角色ID",
+                    "type": "integer"
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
+                }
+            }
+        },
         "request.ApiSearchParams": {
             "type": "object",
             "properties": {
@@ -2446,59 +2481,6 @@
                 }
             }
         },
-        "request.ClearTable": {
-            "type": "object",
-            "properties": {
-                "compareField": {
-                    "type": "string"
-                },
-                "interval": {
-                    "type": "string"
-                },
-                "tableName": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.CronReq": {
-            "type": "object",
-            "required": [
-                "expression",
-                "id",
-                "method",
-                "name"
-            ],
-            "properties": {
-                "comment": {
-                    "type": "string"
-                },
-                "expression": {
-                    "type": "string"
-                },
-                "extraParams": {
-                    "$ref": "#/definitions/request.ExtraParams"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "method": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "open": {
-                    "type": "boolean"
-                },
-                "strategy": {
-                    "type": "string",
-                    "enum": [
-                        "always",
-                        "once"
-                    ]
-                }
-            }
-        },
         "request.EditMenuReq": {
             "type": "object",
             "required": [
@@ -2574,19 +2556,37 @@
                 }
             }
         },
-        "request.ExtraParams": {
+        "request.EditUser": {
             "type": "object",
+            "required": [
+                "id",
+                "roleId",
+                "username"
+            ],
             "properties": {
-                "command": {
-                    "description": "for shell",
+                "active": {
+                    "description": "是否活跃",
+                    "type": "boolean"
+                },
+                "email": {
+                    "description": "邮箱",
                     "type": "string"
                 },
-                "tableInfo": {
-                    "description": "for clearTable",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/request.ClearTable"
-                    }
+                "id": {
+                    "description": "用户ID",
+                    "type": "integer"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "roleId": {
+                    "description": "角色ID",
+                    "type": "integer"
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
                 }
             }
         },
@@ -2723,18 +2723,6 @@
                 }
             }
         },
-        "request.Role": {
-            "type": "object",
-            "required": [
-                "roleName"
-            ],
-            "properties": {
-                "roleName": {
-                    "description": "角色名称",
-                    "type": "string"
-                }
-            }
-        },
         "request.SwitchActive": {
             "type": "object",
             "required": [
@@ -2867,6 +2855,10 @@
         },
         "response.UserResult": {
             "type": "object",
+            "required": [
+                "roleId",
+                "username"
+            ],
             "properties": {
                 "active": {
                     "description": "是否活跃",
@@ -2881,20 +2873,24 @@
                     "type": "string"
                 },
                 "id": {
-                    "description": "用户ID",
+                    "description": "主键ID",
                     "type": "integer"
                 },
                 "phone": {
                     "description": "手机号",
                     "type": "string"
                 },
-                "role": {
-                    "description": "角色名",
-                    "type": "string"
-                },
                 "roleId": {
                     "description": "角色ID",
                     "type": "integer"
+                },
+                "roleName": {
+                    "description": "角色名",
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "description": "更新时间",
+                    "type": "string"
                 },
                 "username": {
                     "description": "用户名",
